// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`vite config Matches snapshot during build 1`] = `
{
  "base": "/E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/dist-svelte/",
  "build": {
    "emptyOutDir": false,
    "manifest": "manifest.json",
    "rollupOptions": {
      "input": {
        "svelte-index": "E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/src/svelte-index.ts",
      },
      "output": {
        "assetFileNames": "[name].[hash].[ext]",
        "chunkFileNames": "[name].[hash].js",
        "dir": "E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/dist-svelte",
        "entryFileNames": "[name].[hash].js",
        "format": "module",
      },
    },
  },
  "plugins": [
    {
      "config": {
        "compilerOptions": {
          "dev": true,
        },
        "configFile": false,
        "preprocess": [
          undefined,
          {
            "markup": [Function],
          },
        ],
      },
      "name": "svlete",
    },
    {
      "buildStart": [Function],
      "configureServer": [Function],
      "name": "lipemat:svelte-checker",
    },
    [
      {
        "apply": "build",
        "config": [Function],
        "name": "lipemat:wp-externals",
      },
      {
        "name": "rollup-plugin-external-globals",
        "options": [Function],
        "transform": [Function],
      },
      {
        "name": "vite-plugin-external",
        "passed": [
          {
            "development": {
              "externals": {
                "@wordpress/a11y": "window.wp?.a11y",
                "@wordpress/annotations": "window.wp?.annotations",
                "@wordpress/api-fetch": "window.wp?.apiFetch",
                "@wordpress/autop": "window.wp?.autop",
                "@wordpress/blob": "window.wp?.blob",
                "@wordpress/block-directory": "window.wp?.blockDirectory",
                "@wordpress/block-editor": "window.wp?.blockEditor",
                "@wordpress/block-library": "window.wp?.blockLibrary",
                "@wordpress/block-serialization-default-parser": "window.wp?.blockSerializationDefaultParser",
                "@wordpress/blocks": "window.wp?.blocks",
                "@wordpress/commands": "window.wp?.commands",
                "@wordpress/components": "window.wp?.components",
                "@wordpress/compose": "window.wp?.compose",
                "@wordpress/core-data": "window.wp?.coreData",
                "@wordpress/data": "window.wp?.data",
                "@wordpress/data-controls": "window.wp?.dataControls",
                "@wordpress/date": "window.wp?.date",
                "@wordpress/deprecated": "window.wp?.deprecated",
                "@wordpress/dom": "window.wp?.dom",
                "@wordpress/dom-ready": "window.wp?.domReady",
                "@wordpress/edit-post": "window.wp?.editPost",
                "@wordpress/edit-site": "window.wp?.editSite",
                "@wordpress/editor": "window.wp?.editor",
                "@wordpress/element": "window.wp?.element",
                "@wordpress/escape-html": "window.wp?.escapeHtml",
                "@wordpress/hooks": "window.wp?.hooks",
                "@wordpress/html-entities": "window.wp?.htmlEntities",
                "@wordpress/i18n": "window.wp?.i18n",
                "@wordpress/is-shallow-equal": "window.wp?.isShallowEqual",
                "@wordpress/keyboard-shortcuts": "window.wp?.keyboardShortcuts",
                "@wordpress/keycodes": "window.wp?.keycodes",
                "@wordpress/list-reusable-blocks": "window.wp?.listReusableBlocks",
                "@wordpress/media-utils": "window.wp?.mediaUtils",
                "@wordpress/notices": "window.wp?.notices",
                "@wordpress/nux": "window.wp?.nux",
                "@wordpress/plugins": "window.wp?.plugins",
                "@wordpress/primitives": "window.wp?.primitives",
                "@wordpress/priority-queue": "window.wp?.priorityQueue",
                "@wordpress/redux-routine": "window.wp?.reduxRoutine",
                "@wordpress/reusable-blocks": "window.wp?.reusableBlocks",
                "@wordpress/rich-text": "window.wp?.richText",
                "@wordpress/server-side-render": "window.wp?.serverSideRender",
                "@wordpress/shortcode": "window.wp?.shortcode",
                "@wordpress/token-list": "window.wp?.tokenList",
                "@wordpress/url": "window.wp?.url",
                "@wordpress/utils": "window.wp?.utils",
                "@wordpress/viewport": "window.wp?.viewport",
                "@wordpress/warning": "window.wp?.warning",
                "@wordpress/wordcount": "window.wp?.wordcount",
                "backbone": "Backbone",
                "jquery": "jQuery",
                "lodash": "lodash",
                "moment": "moment",
                "react": "React",
                "react-dom": "ReactDOM",
                "react-refresh/runtime": "ReactRefreshRuntime",
                "react/jsx-runtime": "ReactJSXRuntime",
                "tinymce": "tinymce",
                "wp": "wp",
              },
            },
          },
        ],
      },
    ],
    {
      "config": [Function],
      "configureServer": [Function],
      "name": "lipemat:css-module-types",
    },
    {
      "config": [Function],
      "name": "lipemat:postcss-config",
    },
    {
      "apply": "build",
      "enforce": "post",
      "name": "lipemat:manifest-hash",
      "writeBundle": [Function],
    },
    {
      "apply": "build",
      "buildStart": [Function],
      "name": "lipemat:clean-except-running",
    },
    {
      "api": {
        "done": Promise {},
        "staticOutputs": Set {},
      },
      "apply": "build",
      "closeBundle": [Function],
      "configResolved": [Function],
      "enforce": "post",
      "name": "vite-plugin-compression",
    },
  ],
  "root": "E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/src/",
}
`;

exports[`vite config Matches snapshot during dev 1`] = `
{
  "base": "/E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/dist-svelte/",
  "build": {
    "emptyOutDir": false,
    "manifest": "manifest.json",
    "rollupOptions": {
      "input": {
        "svelte-index": "E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/src/svelte-index.ts",
      },
      "output": {
        "assetFileNames": "[name].[hash].[ext]",
        "chunkFileNames": "[name].[hash].js",
        "dir": "E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/dist-svelte",
        "entryFileNames": "[name].[hash].js",
        "format": "module",
      },
    },
  },
  "plugins": [
    {
      "config": {
        "compilerOptions": {
          "dev": true,
        },
        "configFile": false,
        "preprocess": [
          undefined,
          {
            "markup": [Function],
          },
        ],
      },
      "name": "svlete",
    },
    {
      "buildStart": [Function],
      "configureServer": [Function],
      "name": "lipemat:svelte-checker",
    },
    [
      {
        "apply": "build",
        "config": [Function],
        "name": "lipemat:wp-externals",
      },
      {
        "name": "rollup-plugin-external-globals",
        "options": [Function],
        "transform": [Function],
      },
      {
        "name": "vite-plugin-external",
        "passed": [
          {
            "development": {
              "externals": {
                "@wordpress/a11y": "window.wp?.a11y",
                "@wordpress/annotations": "window.wp?.annotations",
                "@wordpress/api-fetch": "window.wp?.apiFetch",
                "@wordpress/autop": "window.wp?.autop",
                "@wordpress/blob": "window.wp?.blob",
                "@wordpress/block-directory": "window.wp?.blockDirectory",
                "@wordpress/block-editor": "window.wp?.blockEditor",
                "@wordpress/block-library": "window.wp?.blockLibrary",
                "@wordpress/block-serialization-default-parser": "window.wp?.blockSerializationDefaultParser",
                "@wordpress/blocks": "window.wp?.blocks",
                "@wordpress/commands": "window.wp?.commands",
                "@wordpress/components": "window.wp?.components",
                "@wordpress/compose": "window.wp?.compose",
                "@wordpress/core-data": "window.wp?.coreData",
                "@wordpress/data": "window.wp?.data",
                "@wordpress/data-controls": "window.wp?.dataControls",
                "@wordpress/date": "window.wp?.date",
                "@wordpress/deprecated": "window.wp?.deprecated",
                "@wordpress/dom": "window.wp?.dom",
                "@wordpress/dom-ready": "window.wp?.domReady",
                "@wordpress/edit-post": "window.wp?.editPost",
                "@wordpress/edit-site": "window.wp?.editSite",
                "@wordpress/editor": "window.wp?.editor",
                "@wordpress/element": "window.wp?.element",
                "@wordpress/escape-html": "window.wp?.escapeHtml",
                "@wordpress/hooks": "window.wp?.hooks",
                "@wordpress/html-entities": "window.wp?.htmlEntities",
                "@wordpress/i18n": "window.wp?.i18n",
                "@wordpress/is-shallow-equal": "window.wp?.isShallowEqual",
                "@wordpress/keyboard-shortcuts": "window.wp?.keyboardShortcuts",
                "@wordpress/keycodes": "window.wp?.keycodes",
                "@wordpress/list-reusable-blocks": "window.wp?.listReusableBlocks",
                "@wordpress/media-utils": "window.wp?.mediaUtils",
                "@wordpress/notices": "window.wp?.notices",
                "@wordpress/nux": "window.wp?.nux",
                "@wordpress/plugins": "window.wp?.plugins",
                "@wordpress/primitives": "window.wp?.primitives",
                "@wordpress/priority-queue": "window.wp?.priorityQueue",
                "@wordpress/redux-routine": "window.wp?.reduxRoutine",
                "@wordpress/reusable-blocks": "window.wp?.reusableBlocks",
                "@wordpress/rich-text": "window.wp?.richText",
                "@wordpress/server-side-render": "window.wp?.serverSideRender",
                "@wordpress/shortcode": "window.wp?.shortcode",
                "@wordpress/token-list": "window.wp?.tokenList",
                "@wordpress/url": "window.wp?.url",
                "@wordpress/utils": "window.wp?.utils",
                "@wordpress/viewport": "window.wp?.viewport",
                "@wordpress/warning": "window.wp?.warning",
                "@wordpress/wordcount": "window.wp?.wordcount",
                "backbone": "Backbone",
                "jquery": "jQuery",
                "lodash": "lodash",
                "moment": "moment",
                "react": "React",
                "react-dom": "ReactDOM",
                "react-refresh/runtime": "ReactRefreshRuntime",
                "react/jsx-runtime": "ReactJSXRuntime",
                "tinymce": "tinymce",
                "wp": "wp",
              },
            },
          },
        ],
      },
    ],
    {
      "config": [Function],
      "configureServer": [Function],
      "name": "lipemat:css-module-types",
    },
    {
      "config": [Function],
      "name": "lipemat:postcss-config",
    },
    {
      "apply": "build",
      "enforce": "post",
      "name": "lipemat:manifest-hash",
      "writeBundle": [Function],
    },
    {
      "apply": "build",
      "buildStart": [Function],
      "name": "lipemat:clean-except-running",
    },
    {
      "api": {
        "done": Promise {},
        "staticOutputs": Set {},
      },
      "apply": "build",
      "closeBundle": [Function],
      "configResolved": [Function],
      "enforce": "post",
      "name": "vite-plugin-compression",
    },
    {
      "apply": "serve",
      "configureServer": [Function],
      "name": "lipemat:running-flag",
    },
    {
      "apply": "serve",
      "config": [Function],
      "name": "lipemat:dev-server",
    },
  ],
  "root": "E:/SVN/the-boilerplate/packages/js-boilerplate-svelte/js/src/",
}
`;
